--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,9 @@
 name: 'Git Arbitary and PR'
 description: 'Some arbitary Git action and creating a Pull Request to Github based on octokit'
 inputs:
+  authentication:
+    description: 'Authentication Token of Github if any'
+    required: false
   head-branch:
     description: 'Head branch where the Pull Request originate from'
     required: true
