--- a/action.yaml
+++ b/action.yaml
@@ -1,21 +1,21 @@
-name: 'Git Arbitary and PR'
-description: 'Some arbitary Git action and creating a Pull Request to Github based on octokit'
+name: 'Simple PR Create'
+description: 'Simple Pull Request creation to Github based on octokit'
 inputs:
   authentication:
     description: 'Authentication Token of Github if any'
     required: false
-  head-branch:
+  head:
     description: 'Head branch where the Pull Request originate from'
     required: true
-  base-branch:
+  base:
     description: 'Base branch where the Pull Request will merge to'
     required: true
     default: 'master'
-  pr-title:
+  title:
     description: 'Pull Request Title'
     required: true
     default: 'Pull Request by Github Action Bot'
-  pr-body:
+  body:
     description: 'Pull Request Body'
     required: true
     default: 'This Pull Request is created by Github Action Bot'
